<resources>
    <string name="app_name">CENI RDC</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="action_settings">Settings</string>
    <string name="about">A propos</string>
    <string name="welcome">Accueil</string>
    <string name="txt_ceni">Votons pour le bien être du pays.</string>
    <string name="menu_cands">Candidats</string>
    <string name="subemenu_list_elec">Suis-je inscrit sur la liste électorale</string>
    <string name="menu_buro_vote">Mon bureau de vote</string>
    <string name="subemenu_buro_vote">Où se trouve mon bureau de vote</string>
    <string name="menu_list_cands">Liste des Candidats</string>
    <string name="subemenu_cands">Candidat inscrits aux scrutins</string>
    <string name="menu_results">Résultats Officiels</string>
    <string name="subemenu_results">Résultats officiels des scrutins</string>
    <string name="menu_faq">Foire aux questions</string>
    <string name="subemenu_faq">Questions frequentes sur les élections</string>
    <string name="title_activity_about">A propos</string>
    <string name="txt_about">Elections Générales 2018</string>
    <string name="txt_vesion">Version 1.0</string>
    <string name="txt_copyright">Copyright &#169; 2018 CENI. Tous droits réserves.</string>
    <string name="title_about">\u00c0 propos</string>
    <string name="title_activity_candidates">ActivityCandidates</string>
    <string name="title_activity_cands">Liste des candidats</string>
    <string name="menu_cands_prez">Présidentielle</string>
    <string name="txt_vote_choice_prez">PRESIDENTIELLE</string>
    <string name="txt_vote_choice_legs">LEGISTLATIVES</string>
    <string name="txt_vote_choice_leg_nat">LEGISTLATIVES NATIONALES</string>
    <string name="txt_vote_choice_leg_prov">LEGISTLATIVES PROVINCIALES</string>
    <string name="txt_vote_prov_choice">PROVINCIALES</string>
    <string name="txt_vote_choice_urbs">URBAINES</string>
    <string name="txt_vote_choice_loc">LOCALES</string>
    <string name="menu_vote_sim">Simuler un vote</string>
    <string name="subemenu_vote_sim_subtitle">Comment utiliser la machine à voter</string>
    <string name="menuSimInstallation">Installation</string>
    <string name="menuSimOpenVote">Ouvrir les votes</string>
    <string name="menuSimPasserAuvote">Passer au vote</string>
    <string name="menuSimCloturerLeVote">Cloturer les votes</string>
    <string name="menuSimParametrage">Parametrage</string>
    <string name="menuSimImprimer">Imprimer</string>
    <string name="menuSimTransmetre">Transmettres resultas</string>
    <string name="title_menu">Elections 2018</string>
    <string name="title_activity_lois_elec">ActivityLoisElec</string>
    <string name="txt_remplir">Veuillez remplir toutes les cases ci-dessous</string>
    <string name="txt_hint_name">Nom</string>
    <string name="txt_hint_surname">Post-nom</string>
    <string name="txt_hint_birthplace">Lieu de naissance</string>
    <string name="txt_zone_cands">Zone reservée aux candidats.</string>
    <string name="txt_btn_insc">Suis-je inscrit dans la liste électorale?</string>
    <string name="txt_msg_buro_vote">Merci de saisir, ci-dessous, votre numéro d\'électeur tel que écrit sur votre carte d\'électeur.</string>
    <string name="votre_numero_d_electeur">votre numéro d\'électeur</string>
    <string name="ou_se_trouve_mon_bureau_de_vote">Ou se trouve mon bureau de vote ?</string>
    <string name="txt_hint_annee">AAAA</string>
    <string name="txt_hint_jour">JJ</string>
    <string name="txt_hint_mois">MM</string>
    <string name="strVoteSimDisclaimer">Ceci n\'est qu\'une simulation de vote, tous les candidats représentés ici ne sont que des acteurs. Cette option a été créée uniquement dans le but d\'habituer l\'électeur à l\'interface graphique de la machine à voter.</string>
    <string name="strWarning">ATTENTION!</string>
    <string name="btnSimulerVote">SIMULER UN VOTE</string>
    <string name="strSuffrage">SUFFRAGE(S) EXPRIME(S)</string>
    <string name="strWaterMark">Resultats simulation de vote. CENI \u00a9 2018. Tous droits réserves.</string>
    <string name="strShareImage">PARTAGER MES RESULTATS</string>
    <string name="strEmail">votre adresse email</string>
    <string name="strName">votre nom</string>
    <string name="strMessage">votre message</string>
    <string name="strSend">Envoyer</string>
    <string name="strMandatoryFields">Tous les champs sont obligatoires.</string>
</resources>