<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.user.franvanna.ActivityListElectorral">


    <TextView
        android:text="@string/txt_zone_cands"
        android:textColor="#000"
        android:textStyle="bold"
        android:gravity="center"
        android:padding="10dp"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:text="@string/txt_remplir"
        android:gravity="center"
        android:padding="10dp"
        android:layout_height="wrap_content" />

    <EditText
        android:hint="@string/txt_hint_name"
        android:padding="10dp"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:hint="@string/txt_hint_surname"
        android:padding="10dp"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:hint="@string/txt_hint_birthplace"
        android:padding="10dp"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <LinearLayout
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView

            android:text="Date de naissance "
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLength="2"
            android:hint="@string/txt_hint_jour"
            android:inputType="number"
            android:padding="10dp" />


        <EditText
            android:hint="@string/txt_hint_mois"
            android:padding="10dp"
            android:maxLength="2"
            android:inputType="number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <EditText
            android:hint="@string/txt_hint_annee"
            android:padding="10dp"
            android:inputType="number"
            android:maxLength="4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>


    <Button
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:padding="10dp"
        android:background="@color/cdBlue"
        android:text="@string/txt_btn_insc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />






</LinearLayout>
