<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:baselineAligned="false"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.user.franvanna.ActivityVoteSimulation">






    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_weight="6"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/tvCoundDown"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:gravity="center"
            android:ems="10"
            android:padding="10dp"
            android:text="200 j 8 h 80 m"

             />

        <ImageView
            android:layout_width="match_parent"
            android:layout_weight="4"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/ceni"
            />

    </LinearLayout>





    <ScrollView
        android:layout_width="0dp"
        android:layout_weight="4"

        android:layout_height="match_parent">

    <LinearLayout
        android:paddingRight="8dp"
        android:paddingTop="8dp"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

       <TextView

           android:layout_marginTop="0dp"
           android:text="@string/menuSimInstallation"
           style="@style/MenuSim" />

        <TextView

            android:text="@string/menuSimOpenVote"
            style="@style/MenuSim" />

        <TextView


            android:onClick="startVote"
            android:clickable="true"
            android:background="@drawable/color_state_row_menu_blue"
            android:text="@string/menuSimPasserAuvote"
            style="@style/MenuSim" />


        <TextView

            android:text="@string/menuSimCloturerLeVote"
            style="@style/MenuSim" />


        <TextView

            android:text="@string/menuSimParametrage"
            style="@style/MenuSim" />


        <TextView

            android:text="@string/menuSimImprimer"
            style="@style/MenuSim" />


        <TextView

            android:text="@string/menuSimTransmetre"
            style="@style/MenuSim" />








    </LinearLayout>

    </ScrollView>



</LinearLayout>
