<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.koziengineering.docta.pcone.com.koziengineering.user.pcone.ActivityPrintVoteResult">
<!--
    <ImageView
        android:id="@+id/iv"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:src="@mipmap/ic_launcher_round"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />-->


    <TextView
        android:text="@string/strSuffrage"
        android:textColor="@color/cdBlue"
        android:padding="10dp"
        android:textSize="16sp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <ScrollView

        android:layout_weight="5"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/llResultsTicket"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
    <android.support.v7.widget.RecyclerView



        android:id="@+id/rvVoteResults"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">



    </android.support.v7.widget.RecyclerView>

            <LinearLayout
                android:gravity="center"
                android:layout_gravity="center"
                android:padding="@dimen/padding_badge"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_gravity="center"
                    android:layout_height="25dp"
                    android:layout_marginRight="@dimen/padding_badge"
                    android:src="@drawable/ceni" />

                <TextView
                    android:gravity="center_vertical"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:text="@string/strWaterMark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



        <Button
            android:onClick="shareResults"
            android:id="@+id/btnShareResultsImage"
            android:text="@string/strShareImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />



    </LinearLayout>



</LinearLayout>
